--- a/demo/spookyadv/index.html
+++ b/demo/spookyadv/index.html
@@ -4,7 +4,7 @@
 
   <title>Game</title>
 
-  <script language="JavaScript" src="js/engine/include.js"> 	
+  <script language="JavaScrtpt" src="js/engine/include.js"> 	
   	alert("Error loading include.js");
   </script>
 
